--- a/day05.ipynb
+++ b/day05.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "# Advent of Code 2022\n",
     "\n",
-    "## Day Day 5: Supply Stacks\n",
+    "## Day 5: Supply Stacks\n",
     "\n",
     "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
    ],
