added solutions for day 9 and 10, added more notes

--- a/day01.ipynb
+++ b/day01.ipynb
@@ -7,7 +7,17 @@
     "\n",
     "## Day 1: Calorie Counting\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "I've never done Advent of Code before. Previously I'd heard of it half way through the month of December and not bothered to start, This is the first time I've been reminded of it in time to start on Dec 1st.\n",
+    "\n",
+    "I'm using Jupyter Notebooks and Python 3.10. The editor I'm using is DataSpell, and I've trying to use more type hinting on function definitions, so this might not run on some earlier versions of Python.\n",
+    "\n",
+    "In these I decided to write a generator to read the input and do any minimal processing required for the lines to simplify the design of `main`. All input files are in a private `data/` directory named `data/input01.txt` etc. that I git-ignored.\n",
+    "\n",
+    "This first day as very easy. In part 1 I track the highest value seen as `most_calories` and the cumulative count for the current elf. In part 2 rather than tracking the top three, it was easier to keep a list of all totals and sort, taking the top 3. If the data set were huge this O(n log n) step might be a problem, but with this data set it takes a faction of a second.\n",
+    "\n",
+    "I encapsulated the state update into an `update` function but in part 2, this function becomes a lot simpler, so it may be better to take it out."
    ],
    "metadata": {
     "collapsed": false
