--- a/day02.ipynb
+++ b/day02.ipynb
@@ -7,7 +7,11 @@
     "\n",
     "## Day 2: Rock Paper Scissors\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "This solution is largely based on mapping the inputs through several `dict` objects. I translate `'A'`, `'B'`, `'C'` and `'X'`, `'Y'`, `'Z'` to `'Rock'`, `'Paper'`, `'Scissors'` as this makes the `dict` objects easier to understand.\n",
+    "\n",
+    "I think this paid off in part 2 as I just needed to change around some key-value pairs. Having the literal words made it easier to avoid making mistakes."
    ],
    "metadata": {
     "collapsed": false
