--- a/day03.ipynb
+++ b/day03.ipynb
@@ -7,7 +7,13 @@
     "\n",
     "## Day 3: Rucksack Reorganization\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "Today I added a bit more logic in the input reading generator. This groups together multiple lines into a single `yield` for use with part 2.\n",
+    "\n",
+    "`find_single_common_char` finds the single overlap in characters between two strings, for part 2 I re-implemented in terms of a new function `find_common_chars`, but there is probably a cleaner way to find a common char between three sets.\n",
+    "\n",
+    "I found an excuse to use the forbidden comma-equals `,=` operator that shouldn't normally make it through code review."
    ],
    "metadata": {
     "collapsed": false
@@ -73,7 +79,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def find_single_common_char(left: str, right: str) -> str:\n",
+    "def find_single_common_char(left: str, right: Union[str, set[str]]) -> str:\n",
     "    rv = find_common_chars(left, right)\n",
     "    assert (len(rv) == 1), f'expected overlap of exactly 1 item, found {len(rv)} items!'\n",
     "    rv ,= rv # comma-equals single-item unpacking operator ;)\n",
