--- a/day04.ipynb
+++ b/day04.ipynb
@@ -7,7 +7,15 @@
     "\n",
     "## Day 4: Camp Cleanup\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "This day I incorporated a little OO by implementing a `Range` object to calculate the overlap. Teh input reader will yield two of these ranges each time.\n",
+    "\n",
+    "I know list comprehensions could code-golf this a bit e.g. Part 2 reduces to:\n",
+    "\n",
+    "    total = sum([1 for range0, range1 in read_lines(INPUT_FILE) if range0.overlaps(range1)])\n",
+    "\n",
+    "But this wasn't really the coding style I was going for, I think it's easier to read a more imperative loop."
    ],
    "metadata": {
     "collapsed": false
