--- a/day05.ipynb
+++ b/day05.ipynb
@@ -7,7 +7,13 @@
     "\n",
     "## Day 5: Supply Stacks\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "I split reading of the file into 2 generators, one for the header which stops after the first blank line, and one for the body which reads all remaining lines. Note for testing and debugging purposes I added an optional argument to limit how many lines the body reads, this argument isn't used in the final program.\n",
+    "\n",
+    "Each stack is implemented as a `deque`. Since the file reads the header top to bottom I build the stacks backward as a queue with `appendleft` but from then on treat them as stacks.\n",
+    "\n",
+    "Today I initially got part 1 wrong because I'd misunderstood the question and ended up giving the answer to part 2! i.e. I thought the cranes move *n* boxes at once instead of *1* box at once. Though this meant when I finally solved part 1, I already had the answer for part 2. I ended up refactoring out this difference to a `move_method` functional argument. In part 2 the crane itself is a third `deque`.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -84,7 +90,7 @@
     "        assert (len(deques) == len(row)), 'non-uniform row lengths for header'\n",
     "        for d, element in zip(deques, row):\n",
     "            if element:\n",
-    "                # using appendleft because the txt file has items in oposite of stack order\n",
+    "                # using appendleft because the txt file has items in opposite of stack order\n",
     "                d.appendleft(element)\n",
     "    index = 1\n",
     "    rv = {}\n",
@@ -106,7 +112,7 @@
    "source": [
     "class Move:\n",
     "\n",
-    "    __init__ = ['count', 'source', 'destination']\n",
+    "    __slots__ = ['count', 'source', 'destination']\n",
     "\n",
     "    def __init__(self, s: str):\n",
     "        tokens = s.split(' ')\n",
