--- a/day06.ipynb
+++ b/day06.ipynb
@@ -7,7 +7,11 @@
     "\n",
     "## Day 6: Tuning Trouble\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "This day's puzzle as super easy once I'd understood what it as actually asing for!\n",
+    "\n",
+    "I wrote a method `scan` which scans over the data with a given window size and stops when there are no repeated chars. The only difference between part 1 and 2 is `window_length=4` vs `window_length=14`."
    ],
    "metadata": {
     "collapsed": false
