--- a/day07.ipynb
+++ b/day07.ipynb
@@ -7,7 +7,17 @@
     "\n",
     "## Day 7: No Space Left On Device\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "The difficulty went back up compared to yesterday!\n",
+    "\n",
+    "I built three classes `Node` and its subclasses `Folder` and `File`.\n",
+    "\n",
+    "`Node` tracks the name of a node on the file system and its parent (I could probably solve this without linking the parent in the node, but this made it easier). `Folder` tracks child nodes (or `None` if an `ls` command has not been issued yet), `File` tracks the size.\n",
+    "\n",
+    "Some of the methods like `full_name` are just there for testing and debugging. The important work is done by `compute_size` which is recursive on `Folder`.\n",
+    "\n",
+    "`process_commands` does the work of looping over commands and building the tree, tracking `cwd` and navigating up and down. Once this process is complete I had a recursive `get_all_folders` mothod to get a list of folders and then it's relatively simple to apply the logic described in the puzzle for deciding on the correct folder by size. Some extra print lines were in part 2 to check the maths of file sizes was working."
    ],
    "metadata": {
     "collapsed": false
