--- a/day08.ipynb
+++ b/day08.ipynb
@@ -7,7 +7,15 @@
     "\n",
     "## Day 8: Treetop Tree House\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "Before starting part 1 I had two possible solutions in mind. I chose the one I thought would be more efficient, but this turned out to make part 2 more difficult. As part 2 is not revealed until part 1 is submitted, I didn't know this at the time.\n",
+    "\n",
+    "My solution to part 1 creates generators I called light \"beams\", these are generators of points that move from outside through the trees. The `count_hits` function follows each beam, tracking how high off the ground the first part that has not already hit a tree is. I count these hits in a Numpy array and then count the zeros. There is no need to specifically exclude the outer ring of trees.\n",
+    "\n",
+    "In part 2 I wanted to reuse my beam logic and not have to re-write everything, but now we're considering where the trees can see form inside out. I wrote a kind-of \"adapter\" function `outward_beams` that generates 4 beams aligned with a given tree and cuts off points before reaching the tree, thus the beams are going out from the tree. A `calc_scene_score_of_tree` function uses the beams and works out the score for that tree.\n",
+    "\n",
+    "If had known what part 2 was I would have writen part 1 slightly differently."
    ],
    "metadata": {
     "collapsed": false
