added some noted to header of day 11

--- a/day11.ipynb
+++ b/day11.ipynb
@@ -7,7 +7,17 @@
     "\n",
     "## Day 11: Monkey in the Middle\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "Today's part 2 required a bit of maths rather than just blind coding! I think that's the first time in this year's AoC that needed what I'd describe as mathematical thinking. But not too difficult, so I still managed to solve it myself.\n",
+    "\n",
+    "Firstly, in part 1, I build a `Monkey` class and a generator which loops over the file yielding `Monkey` objects to load the data. I used this as mutable state to track the state of the monkeys. The list of items is a `deque` although I'm sure a `list` would have worked fine. There's a lot of printing code in my logic behind this `verbos=` flag that gets passed to methods fo I could compare against the sample output in the question.\n",
+    "\n",
+    "I added a progress bar with `tqdm` to see how long part 2 was going to take without modification to the code other than removing the divide-by-3 and setting the rounds to 10,000. It would take too long. There item worry numbers are too big to compute even with Python's unbounded ints.\n",
+    "\n",
+    "I modified the method which applies the operator to divide by the product of all monkey divisors. They are all primes. I assume this is the lowest base I can use inless there's some other trick I'm missing? This works first time!\n",
+    "\n",
+    "Very fun."
    ],
    "metadata": {
     "collapsed": false
