improved code for day 11

--- a/day11.ipynb
+++ b/day11.ipynb
@@ -21,6 +21,22 @@
    ],
    "metadata": {
     "collapsed": false
+   },
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Update!\n",
+    "\n",
+    "I've refactored my solution a bit\n",
+    "\n",
+    "Now, instead of patching in the `% N` thing, I pass in a `Callable` called `worry_reduction` which gets applied as `lambda item: item // 3` in part 1 and `lambda item: item % N` in part 2. That way the code can be the same for both parts except for that and the change to the number of round!\n",
+    "\n",
+    "I also removed the `verbose=` stuff so there's no longer the extra printing that's not really needed, allowing me to make other small clean ups."
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -37,10 +53,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from typing import Iterator, Union, Optional\n",
-    "from collections import deque\n",
-    "\n",
-    "import tqdm.notebook as tqdm"
+    "from typing import Iterator, Union, Callable\n",
+    "from collections import deque"
    ],
    "metadata": {
     "collapsed": false
@@ -134,36 +148,11 @@
     "        self.if_false = if_false\n",
     "        self.inspections = 0\n",
     "\n",
-    "    def inspect(self, item: int, verbose: bool=False) -> None:\n",
+    "    def apply_operator(self, old: int) -> int:\n",
     "        self.inspections += 1\n",
-    "        if verbose:\n",
-    "            print(f'  Monkey inspects an item with a worry level of {item}.')\n",
-    "\n",
-    "    def apply_operator(self, old: int, verbose: bool=False, N:Optional[int]=None) -> int:\n",
-    "\n",
     "        if self.operator == '*':\n",
-    "\n",
-    "            multiplier = old if self.operand == 'old' else self.operand\n",
-    "            new = multiplier * old\n",
-    "            if verbose:\n",
-    "                print(f'    Worry level is multiplied by {multiplier} to {new}.')\n",
-    "\n",
-    "        else:\n",
-    "\n",
-    "            delta = old if self.operand == 'old' else self.operand\n",
-    "            new = delta + old\n",
-    "            if verbose:\n",
-    "                print(f'    Worry level increases by {delta} to {new}.')\n",
-    "\n",
-    "        if N:\n",
-    "            return new % N\n",
-    "        return new\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f'Monkey {self.number}: {\", \".join([str(i) for i in self.items])}'\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return str(self)"
+    "            return old * (old if self.operand == 'old' else self.operand)\n",
+    "        return old + (old if self.operand == 'old' else self.operand)"
    ],
    "metadata": {
     "collapsed": false
@@ -174,7 +163,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def read_monkeys(filename: str) -> Iterator[Monkey]:\n",
+    "def read_monkeys(filename: str) -> list[Monkey]:\n",
+    "\n",
+    "    rv = []\n",
     "\n",
     "    for block in read_data_blocks(filename):\n",
     "\n",
@@ -194,7 +185,10 @@
     "        if_true = int(strip_line(if_true, '    If true: throw to monkey '))\n",
     "        if_false = int(strip_line(if_false, '    If false: throw to monkey '))\n",
     "\n",
-    "        yield Monkey(monkey_number, starting, operator, operand, test, if_true, if_false)"
+    "        assert monkey_number == len(rv)\n",
+    "        rv.append(Monkey(monkey_number, starting, operator, operand, test, if_true, if_false))\n",
+    "\n",
+    "    return rv"
    ],
    "metadata": {
     "collapsed": false
@@ -214,49 +208,22 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def monkey_round(monkeys: list[Monkey], worry_reduction: bool=True, verbose:bool=False, N:Optional[int]=None) -> None:\n",
+    "def monkey_round(monkeys: list[Monkey],\n",
+    "                 worry_reduction: Callable[[int], int]) -> None:\n",
     "\n",
     "    for monkey in monkeys:\n",
-    "\n",
-    "        if verbose:\n",
-    "            print(f'Monkey {monkey.number}:')\n",
     "\n",
     "        while monkey.items:\n",
-    "            item = monkey.items.popleft()\n",
-    "            monkey.inspect(item, verbose=verbose)\n",
-    "            item = monkey.apply_operator(item, verbose=verbose, N=N)\n",
     "\n",
-    "            if worry_reduction:\n",
-    "                item = item // 3\n",
-    "                if verbose:\n",
-    "                    print(f'    Monkey gets bored with item. Worry level is divided by 3 to {item}.')\n",
+    "            item = monkey.items.popleft()\n",
+    "            item = monkey.apply_operator(item)\n",
+    "\n",
+    "            item = worry_reduction(item)\n",
     "\n",
     "            if item % monkey.divisor == 0:\n",
-    "                if verbose:\n",
-    "                    print(f'    Current worry level is divisible by {monkey.divisor}')\n",
-    "                destination = monkey.if_true\n",
+    "                monkeys[monkey.if_true].items.append(item)\n",
     "            else:\n",
-    "                if verbose:\n",
-    "                    print(f'    Current worry level is not divisible by {monkey.divisor}')\n",
-    "                destination = monkey.if_false\n",
-    "            if verbose:\n",
-    "                print(f'    Item with worry level {item} is thrown to monkey {destination}')\n",
-    "            monkeys[destination].items.append(item)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "def print_state(monkeys: list[Monkey], rounds_complete: int) -> None:\n",
-    "    print(f'After {rounds_complete} rounds...')\n",
-    "    for monkey in monkeys:\n",
-    "        print(monkey)\n",
-    "    print()"
+    "                monkeys[monkey.if_false].items.append(item)"
    ],
    "metadata": {
     "collapsed": false
@@ -269,32 +236,16 @@
    "source": [
     "def do_all_rounds(monkeys: list[Monkey],\n",
     "                  num_rounds: int,\n",
-    "                  worry_reduction: bool=True,\n",
-    "                  verbose: bool=False,\n",
-    "                  progress_bar: bool=False,\n",
-    "                  N:Optional[int]=None) -> int:\n",
+    "                  worry_reduction: Callable[[int], int]) -> int:\n",
     "\n",
-    "    if verbose:\n",
-    "        print_state(monkeys, 0)\n",
-    "\n",
-    "    iterator = range(num_rounds)\n",
-    "    if progress_bar:\n",
-    "        iterator = tqdm.tqdm(iterator)\n",
-    "\n",
-    "    for rounds_complete in iterator:\n",
-    "        monkey_round(monkeys, worry_reduction=worry_reduction, verbose=verbose, N=N)\n",
-    "        if verbose:\n",
-    "            print_state(monkeys, rounds_complete+1)\n",
+    "    for rounds_complete in range(num_rounds):\n",
+    "        monkey_round(monkeys, worry_reduction=worry_reduction)\n",
     "\n",
     "    inspections = []\n",
     "    for monkey in monkeys:\n",
-    "        if verbose:\n",
-    "            print(f'Monkey {monkey.number} inspected items {monkey.inspections} times.')\n",
     "        inspections.append(monkey.inspections)\n",
     "    inspections.sort(reverse=True)\n",
     "    monkey_business = inspections[0] * inspections[1]\n",
-    "    if verbose:\n",
-    "        print()\n",
     "\n",
     "    return monkey_business"
    ],
@@ -327,21 +278,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def main(num_rounds: int, worry_reduction: bool, verbose: bool, progress_bar: bool, N:Optional[int]=None) -> None:\n",
+    "def main():\n",
     "\n",
-    "    monkeys = []\n",
+    "    monkeys = read_monkeys(INPUT_FILE)\n",
+    "    num_rounds = 20\n",
+    "    worry_reduction = lambda item: item // 3\n",
     "\n",
-    "    for monkey in read_monkeys(INPUT_FILE):\n",
-    "        assert monkey.number == len(monkeys)\n",
-    "        monkeys.append(monkey)\n",
-    "\n",
-    "    monkey_business = do_all_rounds(monkeys,\n",
-    "                                    num_rounds,\n",
-    "                                    worry_reduction= worry_reduction,\n",
-    "                                    verbose=verbose,\n",
-    "                                    progress_bar=progress_bar,\n",
-    "                                    N=N)\n",
-    "\n",
+    "    monkey_business = do_all_rounds(monkeys, num_rounds, worry_reduction)\n",
     "    print(f'The level of monkey business after {num_rounds} rounds is {monkey_business}')"
    ],
    "metadata": {
@@ -354,7 +297,7 @@
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    main(num_rounds=20, worry_reduction=True, verbose=False, progress_bar=False, N=None)"
+    "    main()"
    ],
    "metadata": {
     "collapsed": false
@@ -363,22 +306,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Testing Stuff"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Applying the same code to part 2 without `worry_reduction` looks like it will take forever to finish due to the huge numbers.\n",
-    "\n",
-    "There needs ot me a maths trick.\n",
-    "\n",
-    "What's the product of the divisors of the tests?\n",
-    "\n",
-    "Maybe we can perform arithmetic mod this?"
+    "### Part 2"
    ],
    "metadata": {
     "collapsed": false
@@ -389,32 +317,30 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def check_product_of_divisors():\n",
-    "\n",
-    "    monkeys = []\n",
-    "\n",
-    "    for monkey in read_monkeys(INPUT_FILE):\n",
-    "        assert monkey.number == len(monkeys)\n",
-    "        monkeys.append(monkey)\n",
-    "\n",
-    "    N = 1\n",
+    "def product_of_divisors(monkeys: list[Monkey]) -> int:\n",
+    "    rv = 1\n",
     "    for m in monkeys:\n",
-    "        N *= m.divisor\n",
-    "\n",
-    "    return N\n",
-    "\n",
-    "print('product of divisors =', check_product_of_divisors())"
+    "        rv *= m.divisor\n",
+    "    return rv"
    ],
    "metadata": {
     "collapsed": false
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "### Part 2\n",
+    "def main():\n",
     "\n",
-    "I've gone back and edited the `Monkey.apply_operator` to accept the argument `N` and divide by this number and take the remainder is it's not set to `None`."
+    "    monkeys = read_monkeys(INPUT_FILE)\n",
+    "    num_rounds = 10000\n",
+    "    base = product_of_divisors(monkeys)\n",
+    "    worry_reduction = lambda item: item % base\n",
+    "\n",
+    "    monkey_business = do_all_rounds(monkeys, num_rounds, worry_reduction)\n",
+    "    print(f'The level of monkey business after {num_rounds} rounds is {monkey_business}')"
    ],
    "metadata": {
     "collapsed": false
@@ -426,17 +352,7 @@
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    N = check_product_of_divisors()\n",
-    "    main(num_rounds=10000, worry_reduction=False, verbose=False, progress_bar=True, N=N)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Success."
+    "    main()"
    ],
    "metadata": {
     "collapsed": false
