updated stat plot

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -52,13 +52,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# requests the leaderboard for a given day, there is a 5-second sleep to prevent requesting too often\n",
+    "# requests the leaderboard for a given day, there is a sleep to prevent requesting too often\n",
     "def get_leaderboard_html(day: int) -> str:\n",
     "    assert type(day) == int\n",
     "    assert 1 <= day <= 25\n",
     "    url = f'https://adventofcode.com/2022/leaderboard/day/{day}'\n",
     "    print(f'requesting {url}', end='')\n",
-    "    for _ in range(5):\n",
+    "    for _ in range(30):\n",
     "        time.sleep(1)\n",
     "        print(' .', end='')\n",
     "    result = requests.request(method='GET', url=url)\n",
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "first_day = 1\n",
-    "last_day = 13\n",
+    "last_day = 15\n",
     "\n",
     "html = {}\n",
     "\n",
