--- a/day16.ipynb
+++ b/day16.ipynb
@@ -7,7 +7,17 @@
     "\n",
     "## Day 16\n",
     "\n",
-    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022."
+    "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
+    "\n",
+    "Today's notebook isn't too tidy. I didn't get finished until 8:00 PM.\n",
+    "\n",
+    "For part 1 I read the graph of the caves, collapse all nodes with 0 flow rate down to shortest paths, ultimately build a distance matrix between the set containing all flow-rate > 0 nodes and the start node. I represent the solution as an ordered list of valves to open, e.g. for test input: `['DD', 'HH']` means go from AA to DD, open DD, go from DD to EE to FF to GG to HH. Intermediate nodes are implied. In evaluating, time jumps forward in steps of travel time plus 1 for opening. Venting score is remaining time times flow rate so I don't keep adding each time step.\n",
+    "\n",
+    "I search all the possible sequences and in not too much time come up with the largest score.\n",
+    "\n",
+    "Part 2 I enumerate al possible sequences one human/elephant can use to open the valves in 26 minutes. Then make all pairs of non-overlapping sequences. This takes my M1 Pro one hour to do! Finally in a shorter step I just loop over the pairs, adding up the score to find the highest.\n",
+    "\n",
+    "Solution works. Did it within the day the puzzle went up, no spoilers, continued the 16-days streak. It's not a great solution but it works."
    ],
    "metadata": {
     "collapsed": false
@@ -27,15 +37,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from collections import namedtuple, defaultdict, deque\n",
-    "import re\n",
+    "import random\n",
+    "from collections import defaultdict\n",
     "from tqdm.notebook import tqdm as tqdm\n",
-    "from typing import Iterator, Optional, Union, Any\n",
-    "from collections import namedtuple\n",
+    "from typing import Iterator, Optional\n",
     "import re\n",
-    "import functools\n",
-    "from time import sleep\n",
     "from math import inf"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Reading Input"
    ],
    "metadata": {
     "collapsed": false
@@ -67,8 +83,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "INPUT_FILE = 'data/test16.txt'\n",
+    "INPUT_FILE = 'data/input16.txt'\n",
     "START = 'AA'"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Data"
    ],
    "metadata": {
     "collapsed": false
@@ -85,6 +110,15 @@
     "    if valve_number == START or flow_rate != 0:\n",
     "        key_nodes[valve_number] = flow_rate\n",
     "    neighbours_raw[valve_number] = leads_to"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Part 1"
    ],
    "metadata": {
     "collapsed": false
@@ -230,7 +264,6 @@
     "    for next_vent in closed:\n",
     "        search_problem(sequence=sequence+[next_vent], total_time=total_time, closed=closed-{next_vent}, callback=callback)\n",
     "\n",
-    "\n",
     "search_problem(sequence=[], total_time=30, closed=set(key_nodes.keys())-{'AA'}, callback=track_best)\n",
     "print()\n",
     "print('DONE')\n",
@@ -255,7 +288,96 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "ALL_VIABLE = {i: {} for i in range(len(key_nodes))} # no sub 1, want 0 to 15\n",
+    "\n",
+    "def track_viable(score, sequence):\n",
+    "    global ALL_VIABLE\n",
+    "    ALL_VIABLE[len(sequence)][tuple(sequence)] = score\n",
+    "\n",
+    "\n",
+    "def search_problem(sequence: list[str], total_time: int, closed: set[str], callback):\n",
+    "    score = score_sequence(sequence, total_time=total_time)\n",
+    "    if score is None:\n",
+    "        return\n",
+    "    callback(score, sequence)\n",
+    "    for next_vent in closed:\n",
+    "        search_problem(sequence=sequence+[next_vent], total_time=total_time, closed=closed-{next_vent}, callback=callback)\n",
+    "\n",
+    "\n",
+    "search_problem(sequence=[], total_time=26, closed=set(key_nodes.keys())-{'AA'}, callback=track_viable)\n",
+    "print('DONE')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "MAXIMUM_VENTS = 0\n",
+    "for length, viable in ALL_VIABLE.items():\n",
+    "    print(length, len(viable))\n",
+    "    if len(viable) > 0:\n",
+    "        if MAXIMUM_VENTS < length:\n",
+    "            MAXIMUM_VENTS = length\n",
+    "print()\n",
+    "print(f'one person can open at most {MAXIMUM_VENTS} vents')\n",
+    "ALL_VIABLE = {k: v for k, v in ALL_VIABLE.items() if len(v) > 0}\n",
+    "ALL_VIABLE_UNGROUPED = {}\n",
+    "for length, viable in ALL_VIABLE.items():\n",
+    "    print(length, len(viable))\n",
+    "    for seq, score in viable.items():\n",
+    "        ALL_VIABLE_UNGROUPED[seq] = score\n",
+    "len(ALL_VIABLE_UNGROUPED)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ALL_PAIRS = set()\n",
+    "X1 = list(ALL_VIABLE_UNGROUPED.keys())\n",
+    "random.shuffle(X1)\n",
+    "X2 = list(ALL_VIABLE_UNGROUPED.keys())\n",
+    "random.shuffle(X2)\n",
+    "for x in tqdm(X1, desc=\"creating all pairs of viable solves that don't overlap\"):\n",
+    "    if len(x) > 0:\n",
+    "        for y in X2:\n",
+    "            if len(y) > 0:\n",
+    "                sx = set(x)\n",
+    "                sy = set(y)\n",
+    "                if len(sx | sy) == len(sx) + len(sy):\n",
+    "                    pair = [x, y]\n",
+    "                    pair.sort()\n",
+    "                    pair = tuple(pair)\n",
+    "                    ALL_PAIRS.add(pair)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "best_score = 0\n",
+    "for y, e in tqdm(ALL_PAIRS, desc='checking pairs'):\n",
+    "    score = ALL_VIABLE_UNGROUPED[y] + ALL_VIABLE_UNGROUPED[e]\n",
+    "    if score > best_score:\n",
+    "        best_score = score\n",
+    "        #print(score, y, e, sep='\\t')\n",
+    "\n",
+    "#print()\n",
+    "print('The answer is', best_score)"
+   ],
    "metadata": {
     "collapsed": false
    }
