linked day 16 in readme

--- a/day16.ipynb
+++ b/day16.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "# Advent of Code 2022\n",
     "\n",
-    "## Day 16\n",
+    "## Day 16: Proboscidea Volcanium\n",
     "\n",
     "Solution code by [leechristie](https://github.com/leechristie) for Advent of Code 2022.\n",
     "\n",
