--- a/stats.ipynb
+++ b/stats.ipynb
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "first_day = 1\n",
-    "last_day = 15\n",
+    "last_day = 16\n",
     "\n",
     "html = {}\n",
     "\n",
@@ -209,8 +209,18 @@
     "       title='Time for 1st through 100th Person to Solve Advent of Code 2022',\n",
     "       color_continuous_scale=[r'rgba(0,0,0,0)'] + [f'rgba({r},0,{255-r},1)' for r in np.linspace(0, 255, 100)],\n",
     "       height=675,\n",
-    "       width=1200)"
+    "       width=1200,\n",
+    "       log_y=True)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
